--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "eslint app && node app" 
+    "start": "eslint app && node app"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "husky": "^4.2.3",
     "knex": "^0.20.10",
     "pg": "^7.18.2",
