--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "uuid-validate": "0.0.3"
   },
   "husky": {
     "hooks": {
