--- a/package.json
+++ b/package.json
@@ -19,24 +19,27 @@
   "dependencies": {
     "ajv": "^6.12.0",
     "body-parser": "^1.19.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
-    "husky": "^4.2.3",
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
-    "prettier": "^1.19.1",
     "uuid-validate": "0.0.3"
   },
   "husky": {
     "hooks": {
       "pre-commit": "echo Check your code && eslint app "
     }
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "prettier": "^1.19.1"
   }
 }
