--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "eslint app && node app"
+    "start": "node app"
   },
   "repository": {
     "type": "git",
