--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
+    "telegraf": "^3.37.0",
     "uuid-validate": "0.0.3"
   },
   "husky": {
