--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
+    "redis": "^3.0.2",
     "telegraf": "^3.37.0",
     "ws": "^7.2.3"
   },
