--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^7.18.2",
     "redis": "^3.0.2",
     "telegraf": "^3.37.0",
+    "winston": "^3.2.1",
     "ws": "^7.2.3"
   },
   "husky": {
